--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     
     <div class="intro">QA и просто хороший человек</div>
-    <div class="name">МАРИНА ЦЕЛОВАЛЬНИКОВА</div>
+    <div class="name">МАРИНА АНДРЕЕВНА ЦЕЛОВАЛЬНИКОВА</div>
 
     <div class="block">
       <img src="./photo.png" alt="avatar" class="avatar" /></img>
